@@ -2,7 +2,7 @@ name             = exact
 author           = Gryphon Shafer <gryphon@cpan.org>
 license          = Perl_5
 copyright_holder = Gryphon Shafer
-copyright_year   = 2020
+copyright_year   = 2021
 
 [Git::NextVersion]
 
