@@ -1,6 +1,8 @@
 Revision history for exact
 
 {{$NEXT}}
+        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
+        - Update copyright year
 
 1.13      2020-07-17 20:16:34-07:00 America/Los_Angeles
         - Fix for "use open" not being exported
